syntax = "proto3";
package types;

message Receipt {
	bytes PostState = 1;
	int64 CumulativeGasUsed = 2;
	bytes TxHash = 3;
	bytes ContractAddress = 4;
    int64 GasUsed = 5;
    bytes Ret = 6;
    bytes Logs = 7;
}

